# vehicle_routing_problem_module

./: Cargo.toml  README.md  pyproject.toml
src/: lib.rs  point.rs  simulated_annealing.rs  utils.rs  vehicle.rs
