[package]
name = "vehicle_routing_problem_module"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "vehicle_routing_problem_module"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.18.3"
rand = "0.8.5"
